welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:21: error: reassignment to val
setCouleurBrosse=T(x)	
                ^