welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var hauteur = getMondeHauteur()
var T = new Array[Color](hauteur-1)
var couleur = getCouleurSol()
var nbPas:Int=0
var x:Int=0

getCouleurSol()
T(nbPas)= couleur
nbPas=nbPas+1
for (k<-1 to hauteur-1) {
	avance()
	getCouleurSol()
	nbPas=nbPas+1
}

for (k<-1 to hauteur-1) {
avance(); gauche(); avance(); droite(); avance()
for (k<-1 to hauteur-1) {
setCouleurBrosse=T(x)	
x=x+1
baisseBrosse()
leveBrosse()
avance()
}
x=0
}

}
